# lr5_OOP

./: CMakeLists.txt  README.md
include/: Node.h  heap_memory_resource.h  singly_linked_list.h
src/: main.cpp
tests/: test_list.cpp  test_resource.cpp
